# tao

./: .gitignore  .gitmodules  .pdm_build.py  .pre-commit-config.yaml  .readthedocs.yml  .tool-versions  AGENTS.md  CHANGELOG.md  Containerfile  Containerfile.eval-base  Containerfile.eval-docling  Containerfile.eval-marker  Containerfile.eval-mineru  Containerfile.test  GOVERNANCE.md  README.md  dev-environment.yml  mise.toml  pyproject.toml  pytest.ini  tasks.py
apps/agent-services/github-app-token-service/: pyproject.toml
apps/agent-services/github-app-token-service/src/github_app_token_service/: __init__.py  main.py  models.py
apps/chaos/: .containerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CMakeLists.txt  Containerfile  Containerfile.test  README.md  mise.toml  pyproject.toml  tasks.py
apps/chaos/.agents/: .gitignore  README.md  constraints.toml  registry.toml  world.toml
apps/chaos/.agents/docs/: README.md  agents-manifest-background.md  cross-tool-bridging.md  dependency-management.md  governance-and-specs.md  harness-architecture.md  migration-guide.md  python-version-adaptation.md  repository-structure.md  retrospective-conventions.md  tech-stack.md
apps/chaos/.agents/docs/integrations/: podman-in-agentforge.md  python-in-agentforge.md
apps/chaos/.agents/docs/issue-patterns/: README.md  python-errors.md
apps/chaos/.agents/docs/references/: README.md  agent-runtime-closed-loop.md  agent-triggerable-knowledge-assets.md  ai-hero-engineering-practices.md  autoapi-docstring-style.md  ci-troubleshooting-guide.md  dao-business-mapping-framework.md  dao-tech-foundation.md  design-meta-insights.md  external-knowledge-ingestion-pipeline.md  routing-protocol.md  standardization-strategy.md  trae-best-practices.md  web-content-extraction-patterns.md
apps/chaos/.agents/docs/sources/: README.md
apps/chaos/.agents/docs/templates/: agent-memory-entry-template.md  knowledge-driven-exploration-retrospective-template.md
apps/chaos/.agents/kernel/: README.md
apps/chaos/.agents/roles/: README.md  backend-dev.md  collaboration-architect.md  devops.md  execution-orchestrator.md  frontend-dev.md  full-stack.md  governance-auditor.md  organization-steward.md  python-dev.md  reviewer.md
apps/chaos/.agents/roles/engineering/: backend-dev.md  devops.md  frontend-dev.md  full-stack.md  python-dev.md  python-manager.md  reviewer.md
apps/chaos/.agents/roles/governance/: collaboration-architect.md  execution-orchestrator.md  governance-auditor.md  organization-steward.md
apps/chaos/.agents/rules/: backend.md  browser-agent.md  citations.md  containerization.md  context-economy.md  context-routing.md  core-principles.md  data-flow-ordering.md  document-boundaries.md  documentation.md  frontend.md  information-sanitization.md  project-independence.md  python.md  rule-evolution.md  skills.md  world-hierarchy.md
apps/chaos/.agents/schemas/: role.schema.json
apps/chaos/.agents/scripts/: check_constraints.py  check_doc_links.py  check_docs_structure.py  check_env.py  check_marker_env.py  check_py_syntax.py  check_python_compat.py  check_world_hierarchy.py  download_marker_models.py  pdf_tools_evaluation.md  skill-export.py  sync-test-deps.sh  validate_json_schema.py  validate_roles.py  validate_routes.py
apps/chaos/.agents/scripts/validation/: __init__.py  validate_skill_md.py  validate_workbench.py
apps/chaos/.agents/skills/: .validate-config.toml  .validate-skip
apps/chaos/.agents/skills/pdf-to-markdown/: SKILL.md
apps/chaos/.agents/skills/skill-creator/: CHANGELOG.md  SKILL.md
apps/chaos/.agents/skills/task-execution-summary/: CHANGELOG.md  SKILL.md
apps/chaos/.agents/skills/zhihu-global-search/: SKILL.md
apps/chaos/.agents/skills/zhihu-hot-list/: SKILL.md
apps/chaos/.agents/skills/zhihu-search/: SKILL.md
apps/chaos/.agents/skills/zhihu-zhida/: SKILL.md
apps/chaos/.agents/teams/: core-governance.md
apps/chaos/.agents/templates/: SKILL.md
apps/chaos/.agents/templates/starter/: AGENTS.md  world.toml
apps/chaos/.agents/workflows/: diagnostics-fix.md  role-review.md
apps/chaos/.gitcode/workflows/: ci.yml
apps/chaos/.github/workflows/: ci.yml  python-publish.yml  release.yml
apps/chaos/.trae/specs/adopt-mise-dev-environment/: checklist.md  tasks.md
apps/chaos/.trae/specs/cli-status-diagnostics-exploration/: spec.md  tasks.md
apps/chaos/containers/eval/: Containerfile.base  Containerfile.docling  Containerfile.marker  Containerfile.mineru  README.md
apps/chaos/containers/miniconda/: .containerignore  Containerfile  Containerfile.llvm  Containerfile.llvm.gcc  README.md
apps/chaos/docs/: conf.py
apps/chaos/docs/_static/: variables.css
apps/chaos/docs/general/: index.md
apps/chaos/docs/tech/: github-app-token-override.md  jupyterlite.md
apps/chaos/examples/flowkit/: build_workflow.py
apps/chaos/old/: README.md
apps/chaos/old/agent-services/chaos/: .mise.toml  (+2 more)
apps/chaos/old/mini-program/: README.md
apps/chaos/old/web/: README.md
apps/chaos/registry-index/: README.md
apps/chaos/scripts/: verify_harness_compat.py
apps/chaos/specs/: README.md  agentforge-spec-v0.1.md  agentforge-spec-v0.2.md
apps/chaos/src/flowkit/: __init__.py  artifacts.py  container.py  nuitka_config.py  py.typed
apps/chaos/src/taolib/: __init__.py
apps/chaos/tests/: AGENTS.md  test_agents_rules.py  test_check_env.py  test_docs_conf.py  test_tasks.py  test_validate_roles.py
apps/chaos/tests/cli/: test_registry_cache.py  test_routing_engine.py  test_session_engine.py  test_world_publish.py  test_world_resolve.py
apps/chaos/tests/flowkit/: test_flowkit.py
apps/chaos/tests/github_app/: test_cli.py  test_cli_status.py  test_client.py  test_concurrency.py  test_events.py  test_pygithub_adapter.py  test_token_manager.py
apps/chaos/tests/project_changelogs/: CHANGELOG_2026-05.md
apps/chaos/tests/skills/: test_zhihu_skills.py
apps/chaos/tests/test_harness/: conftest.py  test_core.py  test_runtime.py
apps/tao-ai/: README.md  pyproject.toml
apps/tao-ai/src/: settings.toml
apps/tao-ai/src/app/: main.py  settings.py
(+3004 files in other folders)
