[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [{ name = "xinetzone", email = "735613050@qq.com" }]
dependencies = []
description = "道可道，非恒道"
dynamic = ["version"]
license = { file = "LICENSE" }
maintainers = [{ name = "xinetzone", email = "735613050@qq.com" }]
name = "taolib"
readme = "README.md"
requires-python = ">=3.13"

[project.urls]
Documentation = "https://taolib.readthedocs.io/"
Repository = "https://github.com/xinetzone/tao"

[dependency-groups]
docs = [
    "sphinx>=7.0.0",
    "myst-parser>=2.0.0",
    "mystx",
    "myst-nb",
    "sphinx-book-theme",
    "pydata-sphinx-theme",
    "sphinx-design>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-bibtex>=2.6.1",
    "sphinxcontrib-mermaid",
    "sphinx-sitemap",
]
