[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [{ name = "xinetzone", email = "735613050@qq.com" }]
description = "道可道，非恒道"
dynamic = ["version"]
license = { file = "LICENSE" }
maintainers = [{ name = "xinetzone", email = "735613050@qq.com" }]
name = "taolib"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "podman>=5.8.0",
]

[project.optional-dependencies]
github-app = [
  "httpx>=0.27,<1",
  "PyJWT[crypto]>=2.10,<3",
  "PyGithub>=2.5,<3",
]
harness = [
    "langgraph>=1.2,<2",
    "langgraph-checkpoint>=4.1,<5",
    "metaflow>=2.14,<3",
    "pydantic>=2.0,<3",
    "redis>=5.0,<6",
]

flowkit = [
    "nuitka>=1,<2",
    "podman>=5.8.0",
]

[project.urls]
Documentation = "https://taolib.readthedocs.io/"
Repository = "https://github.com/xinetzone/tao"

[project.scripts]
taolib-github-app = "taolib.cli.github_app:main"
world = "taolib.cli.world:main"

[dependency-groups]
dev = [
  "ruff>=0.15.14,<0.16",
  "invoke",
  "uv",
  "typer",
  "pre-commit",
  "python-dotenv",
]

docs = [
    "sphinx>=7.0.0",
    "sphinx-autoapi>=3.3.0",
    "myst-parser>=2.0.0",
    "mystx",
    "myst-nb",
    "sphinx-book-theme",
    "pydata-sphinx-theme",
    "sphinx-design>=0.5.0",
    "sphinx-copybutton>=0.5.2",
    "sphinxcontrib-bibtex>=2.6.1",
    "sphinxcontrib-mermaid",
    "sphinx-sitemap",
    "docutils>=0.20",
]

test = [
    "pytest",
    "pytest-asyncio",
    "pytest-benchmark",
    "pytest-cov",
    "pytest-mock",
    "pytest-xdist",
    "pytest-ruff",
    "fpdf2",
    "pdfplumber>=0.11",
    "pypdfium2",
]

harness-dev = [
    "langgraph-cli",
    "pytest-asyncio",
    "hypothesis",
]

[tool.pdm.version]
source = "scm"
fallback_version = "0.0.0"
write_to = "taolib/_version.py"
write_template = "__version__ = '{}'\n"

[tool.pdm.build]
includes = ["src/taolib"]
package-dir = "src"

[tool.ruff]
exclude = [".git", ".venv", "doc/_build", ".pytest_cache", "__pycache__", ".agents/docs/references/projects/maple-mono/examples.ipynb"]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
ignore = [
  "E501",   # line length handled by formatter
  "ANN401", # allow Any type in **kwargs
  "RUF001", # allow ambiguous unicode characters in strings (Chinese punctuation)
  "RUF002", # allow ambiguous unicode characters in docstrings (Chinese punctuation)
  "RUF003", # allow ambiguous unicode characters in comments (Chinese punctuation)
  "B008",   # allow function call in argument defaults (FastAPI Depends pattern)
  "ANN003", # missing type annotation for **kwargs
  "ANN202", # missing return type annotation for private function
  "ANN204", # missing return type annotation for special method
  "B904",   # raise without from inside except
  "SIM105", # suppressible-exception
  "RUF022", # unsorted __all__
  "SIM102", # collapsible-if
  "C401",   # unnecessary-generator-set
  "C416",   # unnecessary-comprehension
  "RUF006", # asyncio-dangling-task
  "UP046",  # non-pep695-generic-class
]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "UP",  # pyupgrade（含 UP024，拦截 except X, Y: 语法）
  "ANN", # flake8-annotations
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "RUF", # ruff-specific rules
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN", "S101"]
".agents/scripts/**" = ["ANN"]
".agents/skills/**" = ["ANN"]
"docs/**" = ["ANN"]
"tasks.py" = ["ANN"]

[tool.pytest.ini_options]
addopts = "-v --tb=short"
asyncio_mode = "auto"
python_classes = ["Test*"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
testpaths = ["tests"]
markers = [
  "asyncio: mark test as async test",
  "slow: mark test as slow running",
]

[tool.coverage.run]
branch = true
omit = [
  "*/rate_limiter/example_integration.py",
  # Temporarily exclude optional/experimental modules from the main coverage gate.
  "*/harness/*",
  "*/flowkit/container.py",
  "*/flowkit/podman_context.py",
  "*/flowkit/podman_win.py",
  "*/cli/_world_commands/fragment_init.py",
  "*/cli/_world_commands/guide.py",
  "*/cli/_world_commands/init.py",
  "*/cli/_world_commands/route.py",
  "*/cli/_world_commands/session.py",
  "*/cli/_world_engines/constraint_enforcer.py",
  "*/cli/_world_engines/hooks_engine.py",
  "*/cli/_world_engines/role_resolver.py",
]
source = ["src/taolib"]

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "if __name__ == .__main__.:",
  "raise NotImplementedError",
]
fail_under = 80
show_missing = true
